# ClaudeSandbox

./: .gitignore  DEPLOYMENT.md  DEVELOPMENT.md  EngiCalc.spec  README.md  README_DETAILED.md  TEST_REPORT.md  build-windows-simple.bat  build-windows.bat  create-portable-package.bat  run-dev.bat  run-dev.sh
backend/: .env.example  generate_test_pdfs.py  pyproject.toml  standalone.py  test_results.txt
backend/app/: __init__.py  main.py
backend/app/api/: calculation.py  document.py  export.py  template.py
backend/app/core/: config.py
backend/app/models/: calculation.py  document.py  template.py
backend/app/services/: calculation_engine.py  document_service.py  export_service.py  template_service.py
backend/tests/: __init__.py  test_calculation_engine.py  test_export_service.py  test_latex_rendering.py
documents/examples/: getting-started.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Editor.tsx  Preview.tsx  Sidebar.tsx  Toolbar.tsx
frontend/src/services/: api.ts
frontend/src/stores/: documentStore.ts
frontend/src/styles/: index.css
frontend/src/types/: index.ts
templates/: basic-calculation.md  beam-simply-supported.md  column-buckling.md
